overflow issue on iphone test

--- a/styles/sass/_normalize.scss
+++ b/styles/sass/_normalize.scss
@@ -241,7 +241,7 @@ h2 {
 }
 body {
   background-color: $grey;
-  // overflow-x: hidden;
+  overflow-x: hidden;
 }
 .wrapper {
   max-width: 1600px;
